skeplib/tests/fixtures/resolver/invalid/ambiguous_file_folder/a/dummy.sk
fn folder_mod() -> Int {
  return 1;
}
